# JSO2

./: CMakeLists.txt  README.md
script/: make_package.sh  set_up.sh  template
src/: JSO2.cpp  JSO2.h  JSONParser.cpp  JSONParser.h  test.cpp
testcase/: test_case_number.txt  test_case_object.txt  test_case_object.txt.result  test_case_string.txt
